--- a/frontend/public/service.html
+++ b/frontend/public/service.html
@@ -68,7 +68,7 @@
           class="flex flex-col md:flex-row md:space-x-4 font-medium bg-gray-50 md:bg-white rounded-lg md:border-0 md:mt-0 p-4 md:p-0 dark:bg-gray-800 md:dark:bg-gray-900">
           <!-- Home -->
           <li>
-            <a href="index.html"
+            <a href="../index.html"
               class="block py-2 px-4 rounded-lg hover:bg-blue-500 hover:text-white transition duration-200 dark:hover:bg-blue-500 dark:hover:text-white">Home</a>
           </li>
           <!-- About -->
