--- a/frontend/index.html
+++ b/frontend/index.html
@@ -392,7 +392,7 @@
     <footer class="footer bg-gray-900 p-10">
       <form class="gap-6">
         <div class="flex items-center gap-2 text-xl font-bold">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><img src="img/logo.jpg" class="h-8" alt="Logo" /></svg>
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><img src="public/img/logo.jpg" class="h-8" alt="Logo" /></svg>
           <span><p style="color: aliceblue;">Bengkel King</p></span>
         </div>
         <p class="text-base-content"><p style="color: aliceblue;">Don't forget to contact us<br />Like and subscribe.</p>
