--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="public/css/style.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollToPlugin.min.js"></script>
@@ -110,7 +110,7 @@
         <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
             <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-              src="img/Rois.jpg"
+              src="public/img/Rois.jpg"
               alt="Bonnie Avatar" />
           </a>
           <div class="p-5">
@@ -162,7 +162,7 @@
         </div>
         <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
-            <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="img/rojali.png" alt="Jese Avatar" />
+            <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="public/img/rojali.png" alt="Jese Avatar" />
           </a>
           <div class="p-5">
             <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
@@ -214,7 +214,7 @@
         <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
             <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-              src="img/Akmal1.jpg" alt="" />
+              src="public/img/Akmal1.jpg" alt="" />
           </a>
           <div class="p-5">
             <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
@@ -266,7 +266,7 @@
         <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
             <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-              src="img/bili.jpeg" alt="bili gunawan" />
+              src="public/img/bili.jpeg" alt="bili gunawan" />
           </a>
           <div class="p-5">
             <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
@@ -325,7 +325,7 @@
       <a href="#"
         class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
         <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-          src="img/servisbesar.jpg" alt="" />
+          src="public/img/servisbesar.jpg" alt="" />
         <div class="flex flex-col justify-between p-4 leading-normal">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
             Service Besar
@@ -341,7 +341,7 @@
       <a href="#"
         class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
         <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-          src="img/serviskecil.jpg" alt="" />
+          src="public/img/serviskecil.jpg" alt="" />
         <div class="flex flex-col justify-between p-4 leading-normal">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
             Service Ringan
@@ -357,7 +357,7 @@
       <a href="#"
         class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
         <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-          src="img/Body-Repair.jpg" alt="" />
+          src="public/img/Body-Repair.jpg" alt="" />
         <div class="flex flex-col justify-between p-4 leading-normal">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
             Body Repair
@@ -372,7 +372,7 @@
       <a href="#"
         class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
         <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-          src="img/pembersihan.jpeg" alt="" />
+          src="public/img/pembersihan.jpeg" alt="" />
         <div class="flex flex-col justify-between p-4 leading-normal">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
             Pembersihan dan Detailing
